Layout - Fixed the vertical size of the canvas on mobile devices
Surprisingly setting min-height: 50%; works as expected (canvas height is at least 50% of the screen height) while height: 100%; does not work - the canvas takes ~15% of the screen height on mobile devices.

--- a/src/DragNDrop/dnd.css
+++ b/src/DragNDrop/dnd.css
@@ -63,6 +63,7 @@
 .dndflow .reactflow-wrapper {
   flex-grow: 1;
   height: 100%;
+  min-height: 50%;
 }
 
 @media screen and (min-width: 768px) {
